# LocationServer

./: 1015.txt  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  jindu.txt  timeOfLocation.txt
autom4te.cache/: output.2  requests  traces.0  traces.2
include/: Guide.h  Location.h  MsgQueue.h  define.h
main/: CMakeLists.txt  ConnPool.cpp  Database.cpp  Guide.cpp  Location.cpp  Makefile  MsgQueue.cpp  TcpServer  TcpServer.cpp  TcpUser.cpp
main/.deps/: TcpServer-ConnPool.Po  TcpServer-Database.Po  TcpServer-Guide.Po  TcpServer-Location.Po  TcpServer-MsgQueue.Po  TcpServer-Point.Po  TcpServer-TcpServer.Po  TcpServer-TcpUser.Po  TcpServer-Util.Po  TcpServer-main.Po
testClient/: CMakeLists.txt  DBConnpool.cpp  DBConnpool.h  Makefile  Makefile.am  Makefile~  TcpClient.cpp  TcpClient.h  client  configure.in  define.h  main.cpp
testClient/data/: guide_1_10_1.000_Wed Nov  4 17_03_15 2015_^J.txt
testData/: LocationTime.txt  Precision.txt
testFunc/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  client  client.cpp
testFunc/.deps/: client.Po
